apps/changedetection/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tinyauth-forwardauth
  namespace: changedetection
spec:
  forwardAuth:
    address: http://tinyauth.tinyauth.svc.cluster.local:3000/api/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
